[package]
name = "tundra"
version = "0.5.4"
authors = ["Mateusz Maćkowski <mateusz@mackowski.org>"]
edition = "2021"

readme = "README.md"
license = "GPL-3.0"
homepage = "https://tundra.moe"
repository = "https://github.com/m4tx/tundra"
description = "MAL scrobbler for Linux"

[profile.release]
codegen-units = 1
lto = true
strip = true
panic = "abort"

[dependencies]
anitomy = "0.2.0"
anyhow = "1.0.98"
async-channel = "2.3.1"
async-std = "1.13.1"
async-trait = "0.1.88"
axum = "0.8.4"
bytes = "1.10.1"
chrono = "0.4.41"
clap = "4.5.39"
dbus = "0.9.7"
directories = "6.0.0"
edit-distance = "2.1.3"
gdk-pixbuf = "0.20.10"
gettext-rs = { version = "0.7.2", features = ["gettext-system"] }
gio = "0.20.11"
glib = "0.20.10"
gtk = { package = "gtk4", version = "0.9.6" }
hyper = "1.6.0"
lazy_static = "1.5.0"
libadwaita = "0.7.2"
log = "0.4.27"
notify-rust = { version = "4.11.7", default-features = false, features = ["d"] }
oauth2 = { version = "5.0.0", features = ["pkce-plain"] }
once_cell = "1.21.3"
percent-encoding = "2.3.1"
regex = "1.11.1"
reqwest = { version = "0.12.18", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["macros", "rt", "rt-multi-thread", "time"] }
toml = "0.8.22"
url = "2.5.4"
