[package]
name = "tundra"
version = "0.5.4"
authors = ["Mateusz Maćkowski <mateusz@mackowski.org>"]
edition = "2024"

readme = "README.md"
license = "GPL-3.0"
homepage = "https://tundra.moe"
repository = "https://github.com/m4tx/tundra"
description = "MAL scrobbler for Linux"

[profile.release]
codegen-units = 1
lto = true
strip = true
panic = "abort"

[dependencies]
anitomy = "0.2.0"
anyhow = "1.0.100"
async-channel = "2.5.0"
async-std = "1.13.2"
async-trait = "0.1.89"
axum = "0.8.8"
bytes = "1.11.0"
chrono = "0.4.42"
clap = "4.5.53"
dbus = "0.9.10"
directories = "6.0.0"
edit-distance = "2.2.2"
gettext-rs = { version = "0.7.7", features = ["gettext-system"] }
gtk = { package = "gtk4", version = "0.10" }
lazy_static = "1.5.0"
libadwaita = "0.8"
log = "0.4.29"
notify-rust = { version = "4.11.7", default-features = false, features = ["d"] }
oauth2 = { version = "5.0.0", features = ["pkce-plain"] }
once_cell = "1.21.3"
percent-encoding = "2.3.2"
regex = "1.12.2"
reqwest = { version = "0.13.1", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.48.0", features = ["macros", "rt", "rt-multi-thread", "time"] }
toml = "0.9.10"
url = "2.5.7"
