[package]
name = "tundra"
version = "0.5.4"
authors = ["Mateusz Maćkowski <mateusz@mackowski.org>"]
edition = "2024"

readme = "README.md"
license = "GPL-3.0"
homepage = "https://tundra.moe"
repository = "https://github.com/m4tx/tundra"
description = "MAL scrobbler for Linux"

[profile.release]
codegen-units = 1
lto = true
strip = true
panic = "abort"

[dependencies]
anitomy = "0.2"
anyhow = "1"
async-trait = "0.1"
bytes = "1"
chrono = "0.4"
clap = "4"
cot = { version = "0.6", default-features = false }
dbus = "0.9"
directories = "6"
edit-distance = "2"
gettext-rs = { version = "0.7", features = ["gettext-system"] }
gtk = { package = "gtk4", version = "0.11" }
libadwaita = "0.9"
log = "0.4"
notify-rust = { version = "4", default-features = false, features = ["d"] }
oauth2 = { version = "5", features = ["pkce-plain"] }
percent-encoding = "2"
regex = "1"
reqwest = { version = "0.13", features = ["form", "json", "query"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "time"] }
toml = "1"
url = "2"
